--- a/app.yaml
+++ b/app.yaml
@@ -13,7 +13,7 @@ handlers:
 - url: /.*
   script: auto
 env_variables:
-  DJANGO_SETTINGS_MODULE: "myapp.settings"
+  DJANGO_SETTINGS_MODULE: "qwriter_web.settings"
   PYTHONUNBUFFERED: 1
   DISABLE_COLLECTSTATIC: 1
   NEWS_API_TOKEN: "a96688b700f041999a06916d7d52ef1b"
