--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
 github: [koval01]
-patreon: # Replace with a single Patreon username
+patreon: koval
